# Video-Intelligence-Platform

./: .env.example  .gitattributes  .gitignore  README.md  debug_video.py  openapi.json  pyproject.toml  test_pipeline.py  test_query.py
infra/: compose.yml
infra/docker/: Dockerfile.api  Dockerfile.worker
src/: __init__.py
src/api/: main.py  schemas.py
src/api/routes/: __init__.py  health.py  queries.py  videos.py
src/core/: __init__.py  config.py  exceptions.py
src/db/: __init__.py  models.py  session.py
src/governor/: __init__.py  gpu_manager.py
src/services/: __init__.py  audio_intelligence.py  indexing.py  intelligence_router.py  normalizer.py  pipeline.py  visual_intelligence.py
src/storage/: __init__.py  minio_client.py  redis_client.py
src/workers/: __init__.py  tasks.py
